# elasticsearch_cookbook

./: .env  .gitignore  README.md  docker-compose-1-node-siem.yml  docker-compose-1-node.yml  docker-compose-2-nodes.yml  docker-compose-siem.yml  pyproject.toml
es/: es_basics.ipynb  es_basics.postman_collection.json
es_as_cluster/: es_cluster.ipynb  es_cluster.postman_collection.json
es_as_siem/: filebeat-entrypoint.sh  filebeat_suricata.yml  projet_siem.ipynb
es_as_vectordb/: es_vectordb.ipynb  es_vectordb_advanced.ipynb
